--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
- OPENAI_API_KEY=""sk-proj-sZ4jvU9B9BAAV6soS9nVT3BlbkFJzNUwDWv4GTWrsWqryxiX
+ OPENAI_API_KEY="sk-proj-sZ4jvU9B9BAAV6soS9nVT3BlbkFJzNUwDWv4GTWrsWqryxiX"
+ HF_TOKEN="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"
+ GROQ_API_KEY="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"
